--- a/app/views/profiles/show/_gravatar.html.erb
+++ b/app/views/profiles/show/_gravatar.html.erb
@@ -4,6 +4,6 @@
 <% if can? :edit, user %>
 	<%= simple_form_for(:user, url: user_registration_path, html: { method: :put, class: "avatar_upload_form" } ) do |f| %>
 		<%= f.input :avatar, as: :file, label: false, input_html: { class: 'avatar_upload_button' } %>
-	 	<%= f.button :submit, "Please wait", disabled: true, class: 'btn-primary avatar_upload_submit' %>
+	 	<%= f.button :submit, t("please_wait"), disabled: true, class: 'btn-primary avatar_upload_submit' %>
 	<% end %>
 <% end %> 
