--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,10 +1,10 @@
 <div id="comments" class="pull-<%= lang_other_side %>">
 	<% comments.each do |comment| %>
 		<div class="single media">
-			<%= link_to (gravatar comment.writer, size = 35, klass = "img-rounded media-object"), profile_url( comment.writer), class: "pull-#{lang_side}" %>
+			<%= link_to (gravatar comment.writer, size = 35, klass = "img-rounded media-object"), profile_url(comment.writer.slug), class: "pull-#{lang_side}" %>
 		  <div class="media-body">
 		    <small  class="media-heading">
-					<%= link_to (comment.writer.name), profile_url( comment.writer) %>
+					<%= link_to (comment.writer.name), profile_url(comment.writer.slug) %>
 		    </small>
 
 		    <small><%= simple_format comment.body %></small> 
