--- a/app/views/shared/_seats_order.html.erb
+++ b/app/views/shared/_seats_order.html.erb
@@ -1,6 +1,6 @@
 <div class="blueprint_<%= subtrip.vehicle_type %>">
 	<%#= form_tag bookings_path do %>
-  <%= link_to gravatar(subtrip.trip.driver, 43, "img-circle person driver"), profile_url(subtrip.trip.driver) %> 
+  <%= link_to gravatar(subtrip.trip.driver, 43, "img-circle person driver"), profile_url(subtrip.trip.driver.slug) %> 
 	<% subtrip.seats.each_with_index do |id, index| %>
 		<%#= check_for_seat_state(id, index) %>
 		<% if id == 0 %>
@@ -11,7 +11,7 @@
 			<!-- -- -->
 			<% user = User.find_by(id: id) %>
 	  	<!-- -- -->
-  		<%= link_to gravatar(user, 43, "img-circle person passenger-#{index+1}"), profile_url(user) %> 
+  		<%= link_to gravatar(user, 43, "img-circle person passenger-#{index+1}"), profile_url(user.slug) %> 
   		<% if subtrip.is_waiting_for?(user.id) %> 
   			<%= image_tag( IMAGES_PATH+"blueprints/waiting_#{params[:locale]}.gif", size: "43x43", class: "waiting img-circle person passenger-#{index+1}" ) %>
   		<% end %>
