--- a/app/views/superadmins/messages.html.erb
+++ b/app/views/superadmins/messages.html.erb
@@ -13,8 +13,8 @@
 		<% @messages.each do |message| %>
 			<tr>
 				<td><%= message.id %></td>
-				<td><%= link_to message.contact.sender.name, profile_url(message.contact.sender) %></td>
-				<td><%= link_to message.contact.receiver.name, profile_url(message.contact.receiver) %></td>
+				<td><%= link_to message.contact.sender.name, profile_url(message.contact.sender.slug) %></td>
+				<td><%= link_to message.contact.receiver.name, profile_url(message.contact.receiver.slug) %></td>
 				<td><%=  message.body %></td>
 				<td><%= jdate_humanize_without_today message.created_at %></td>
 				<td><%= time_ago_in_words(message.created_at)  %> <%= t("ago") %></td>
