--- a/app/views/users/show/_page_url.html.erb
+++ b/app/views/users/show/_page_url.html.erb
@@ -8,7 +8,7 @@
     <div class="col-sm-8">
       <p class="form-control-static">
         <strong>
-          <%= link_to_profile(@user,"") %>          
+          <%= link_to(profile_url(@user.slug), profile_url(@user.slug) ) %>
         </strong>
       </p>
     </div>
