--- a/app/views/subtrips/show/_subtrip_overview.html.erb
+++ b/app/views/subtrips/show/_subtrip_overview.html.erb
@@ -2,9 +2,9 @@
 	<div class="panel panel-default ">
 		<div class="panel-heading">
 			<h2>
-				<%= @subtrip.origin %>
+				<%= @subtrip.origin(locale)  %>
 				<span class="arrow-ie">&larr;</span> 
-				<%= @subtrip.destination %>
+				<%= @subtrip.destination(locale)  %>
 				<% if @subtrip.price %>
 					<strong class="pull-<%= lang_other_side  %>">
 						<%= t 'currency', amount: currency(@subtrip.price), unit: @subtrip.trip.currency.try(:symbol) %>
