fix bugs in user list float and make dates depend on locale

--- a/app/views/shared/_users_list.html.erb
+++ b/app/views/shared/_users_list.html.erb
@@ -33,7 +33,7 @@
 					</span>		
 					
 					<% if random_user %>
-						<small class="pull-left text-muted meta"> <%= user.city_name %> </small>   		
+						<small class="text-muted  meta <%= lang_other_side %>0"> <%= user.city_name %> </small>   		aaaaa
 					<% else %>
 						<%= resent_activity(user, "meta #{lang_other_side}0") %>						
 					<% end %>
