--- a/app/views/trips/edit/_trips.html.erb
+++ b/app/views/trips/edit/_trips.html.erb
@@ -10,7 +10,7 @@
 	<tbody>
 	  <% @trips.each do |trip| %>
 	    <% trip.subtrips.each do |subtrip| %>
-	      <% next if subtrip.origin.downcase == subtrip.destination.downcase %>
+	      <% next if subtrip.olat == subtrip.dlat %>
 	      <%= render 'trips/edit/trips_rows', subtrip: subtrip %>
 	    <% end %>        
 	  <% end %>
@@ -26,12 +26,12 @@
 	</thead>
 	<tbody>
  		<%= f.simple_fields_for :subtrips do |b| %>
-      <% next if b.object.origin.downcase == b.object.destination.downcase %>
+      <% next if b.object.olat == b.object.dlat %>
       <%#= render 'trips/edit/trip_rows', f: b  %>
 			<tr>
 				<td><%= b.object.origin %> </td>
 				<td><%= b.object.destination %> </td>
-				<td><%= b.select :price, (0..(200 * b.object.trip.currency.price_step)).step(b.object.trip.currency.price_step).map{|s| ["#{t('currency', amount: s, unit: b.object.trip.currency.try(:symbol) )}", s]},{prompt: b.object.price }, {class: "time_select"} %></td>
+				<td><%= b.select :price, (0..(400 * b.object.trip.currency.price_step)).step(b.object.trip.currency.price_step).map{|s| ["#{t('currency', amount: s, unit: b.object.trip.currency.try(:symbol) )}", s]},{prompt: b.object.price }, {class: "time_select"} %></td>
 				<td> <%= b.input :active, label: false %></td>
 
 			</tr>
