--- a/app/views/trips/edit/_trip.erb
+++ b/app/views/trips/edit/_trip.erb
@@ -10,7 +10,7 @@
 	</thead>
 	<tbody>
  		<%= f.simple_fields_for :subtrips do |b| %>
-      <% next if b.object.origin.downcase == b.object.destination.downcase %>
+      <% next if b.object.olat == b.object.dlat %>
       <%= render 'trips/edit/trip_rows', f: b  %>
 	  <% end %>
 	</tbody>
