--- a/app/views/trips/shared/_trip_summary.html.erb
+++ b/app/views/trips/shared/_trip_summary.html.erb
@@ -27,7 +27,7 @@
 			<tbody>
 				<tr>
 					<th><%= t 'from' %></th>
-					<td><%= @trip.first_city.origin %></td>
+					<td><%= @trip.first_city.origin(locale) %></td>
 					<td><%= @trip.first_city.date_time.to_s(:time) %></td>
 					<td>
 						<%= apropriate_date @trip.first_city %>
@@ -37,7 +37,7 @@
 				<% @trip.via_cities.each do |c| %>
 					<tr>
 						<th><%= t 'via' %></th>
-						<td><%= c.origin%></td>
+						<td><%= c.origin(locale)%></td>
 						<td><%= c.date_time.to_s(:time) %></td>
 					<td>
 						<%= apropriate_date c %>
@@ -47,7 +47,7 @@
 
 				<tr>
 					<th><%= t 'to' %></th>
-					<td><%= @trip.last_city.destination %></td>
+					<td><%= @trip.last_city.destination(locale) %></td>
 					<td><%= @trip.subtrips.last.date_time.to_s(:time) %></td>
 					<td>
 						<%= apropriate_date @trip.subtrips.last %>
