add samandehi meta to head

--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -3,6 +3,8 @@
 <head>
   <title> <%= "(#{session[:unread_messages]})" if notification_exist? session[:unread_messages]  %> <%=t 'site_info.title' %><%= " | #{@page_title}" if @page_title %></title>
 
+  <meta name="samandehi-secure-footprint" content="samandehi-secure-footprint:6f745547397447744a764d2f4f397a6b654a77784647665a76654f2b543541365579466f724747345135686a6c2b74474164557765673d3d">
+
   <!-- dp2dxhgz2DSL0XBruyi43dku3so -->
   <meta name="alexaVerifyID" content="dp2dxhgz2DSL0XBruyi43dku3so" />
 
