--- a/app/views/subtrips/show/_subtrip_overview.html.erb
+++ b/app/views/subtrips/show/_subtrip_overview.html.erb
@@ -13,7 +13,7 @@
 			</h2>
 		</div>
 
-		<table class="table orogin-destination">
+		<table class="table table-responsive orogin-destination">
 		  <tbody>
 		  	<tr>
 		  		<th><%= t 'path' %></th>
@@ -79,11 +79,13 @@
 							<% if can? :edit, @subtrip %>
 				  			<%= link_to t(".delete_seats"), edit_subtrip_path, class: "btn btn-lg btn-warning pull-#{lang_other_side}" %>
 				  			<%= link_to t(".edit_trip"), edit_trip_path(@subtrip.trip), class: "btn btn-lg btn-warning pull-#{lang_side}" %>
-
+        
+							<% elsif @booking && @booking.acceptance_status == -1 %>
+								<%= t ".have_rejected" %>
 							<% elsif (@branch.nil? || (@driver.is_active? @branch)) && (@subtrip.date_time > DateTime.now)%>
 				  			<%= link_to t(".book_trip"), new_booking_path(trip: @subtrip.id), class: "btn btn-lg btn-warning pull-left" %>		
 				  		<% elsif @subtrip.date_time < DateTime.now %>	
-
+								<%= t ".expired_trip" %>
 							<% else %>
 								<%= t ".only_bookable_via_tel" %>								
 							<% end %>
