--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-  <title> <%= "(#{session[:unread_messages]})" if notification_exist? session[:unread_messages]  %> <%=t 'site_info.title' %><%= " | #{@page_title}" if @page_title %></title>
-
-  <meta name="samandehi-secure-footprint" content="samandehi-secure-footprint:6f745547397447744a764d2f4f397a6b654a77784647665a76654f2b543541365579466f724747345135686a6c2b74474164557765673d3d">
-
+  <title> 
+  <% if current_user && ( (notification_exist? @unread_messages_notifications) || 
+           @booking_request_notifications.any? ||
+           @booking_respond_notifications.any?)
+  %>
+    <%= "(#{@unread_messages_notifications.to_i + 
+            @booking_request_notifications.try(:size).to_i +
+            @booking_respond_notifications.try(:size).to_i 
+          })" 
+    %>     
+  <% end %>
+    <%=t 'site_info.title' %>
+    <%= " | #{@page_title}" if @page_title %>
+  </title>
+  <meta name="samandehi-secure-footprint" content="samandehi-secure-footprint:786e4a2f594f712f392b34533568727a32615934323457466d7a6971526f2b304172447658583769517a653738394c777930506657673d3d">
   <!-- dp2dxhgz2DSL0XBruyi43dku3so -->
   <meta name="alexaVerifyID" content="dp2dxhgz2DSL0XBruyi43dku3so" />
 
