--- a/app/views/trips/trip/_subtrip_row.html.erb
+++ b/app/views/trips/trip/_subtrip_row.html.erb
@@ -1,6 +1,6 @@
 <tr>
-	<th><%= link_to(subtrip.origin, subtrip_path(subtrip.id)) %></th>
-	<th><%= link_to(subtrip.destination, subtrip_path(subtrip.id)) %></th>
+	<th><%= link_to(subtrip.origin_city, subtrip_path(subtrip.id)) %></th>
+	<th><%= link_to(subtrip.destination_city, subtrip_path(subtrip.id)) %></th>
 	<td><%= link_to( jtime_humanize(subtrip.date_time), subtrip_path(subtrip.id) ) %></td>
 	<th><%= link_to(t('currency', amount: subtrip.price, unit: subtrip.trip.currency.try(:symbol)), subtrip_path(subtrip.id)) %></th>
 	<th><%= link_to("#{subtrip.free_seats}/#{subtrip.number_of_total_seats}", subtrip_path(subtrip.id)) %></th>
