add facebook like button to navbar

--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -44,3 +44,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body style="direction:<%= 'ltr' if params[:locale] == 'en' %> ;">
+
+<div id="fb-root"></div>
+
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=697732596936483";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
