--- a/app/views/application/_admin_navbar.html.erb
+++ b/app/views/application/_admin_navbar.html.erb
@@ -4,10 +4,14 @@
       <ul class="sidebar-nav">
         <li class="sidebar-brand"><%= link_to "Admin Panel", root_path %></li>
         <li> <%= link_to "Users",  users_path %></li>
-        <li> <%= link_to "Trips",  trips_path %></li>
+        <!-- <li> <%#= link_to "Trips",  trips_path %></li> -->
         <li> <%= link_to "Companies", companies_path %></li>
-        <li> <%= link_to "Bookings", bookings_path %></li>
-        <li> <%= link_to "Spacial events", spacial_events_path %></li>
+        <!-- <li> <%#= link_to "Bookings", bookings_path %></li> -->
+        <!-- <!-- <li> <%#= link_to "Spacial events", spacial_events_path %></li> --> -->
+        <!-- <li> <%#= link_to "Spacial events", spacial_events_path %></li> -->
+        <li> <%= link_to "برند خودروها", vehicle_brands_path %></li>
+        <li> <%= link_to "مدل خودروها", vehicle_models_path %></li>
+        
       </ul>
     </div>
   </div>
