--- a/app/views/vehicle_models/edit.html.erb
+++ b/app/views/vehicle_models/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @vehicle_model %> |
-<%= link_to 'Back', vehicle_models_path %>
+<%= link_to 'Show', [@vehicle_brand, @vehicle_model] %> |
+<%= link_to 'Back', @vehicle_brand %>
