--- a/app/views/application/nav/_facebook_like.html.erb
+++ b/app/views/application/nav/_facebook_like.html.erb
@@ -1,4 +1,11 @@
 <li id="facebook_like" class="hidden-sm">
-  <div class="fb-like" data-href="https://www.facebook.com/hamsafaryab" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+  <div 
+	  class="fb-like" 
+	  data-href="https://www.facebook.com/hamsafaryab" 
+	  data-layout="button_count" 
+	  data-action="like" 
+	  data-show-faces="false" 
+	  data-share="false"
+  ></div>
 </li>
 
