pagination on profile, dashboard, branch

--- a/app/views/branches/show/_large_screens.html.erb
+++ b/app/views/branches/show/_large_screens.html.erb
@@ -21,6 +21,6 @@
 	<%= render 'branches/show/cover'%>
 	<%= flash_creator flash %>
 
-	<%= render partial: 'shared/posts_panel', locals: {objs:@branch.timeline} %>
+	<%= render partial: 'shared/posts_panel' %>
 
 </div>
