--- a/app/views/search_subtrips/search.html.erb
+++ b/app/views/search_subtrips/search.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: 'search_form', locals:{ search_subtrip: @search_subtrip  } %>
 
-<div id="search_subtrips">
+<div id="search_subtrips" class="scrollable">
 	<div class="sidebar col-sm-2">
 <!-- 		<div class="panel panel-default ">
 		  <div class="panel-heading">
