add bullet in gemfile and apply cache for profile

--- a/app/views/shared/_posts_panel.html.erb
+++ b/app/views/shared/_posts_panel.html.erb
@@ -10,7 +10,7 @@
   	<% end %>
 
     <% if @timeline.try(:any?) %>
-      <%= will_paginate @timeline %>
+      <%= will_paginate @timeline, class: "pagination" %>
     <% end %>
 	</div>
 </div>
