--- a/app/views/application/nav/_facebook_like.html.erb
+++ b/app/views/application/nav/_facebook_like.html.erb
@@ -1,11 +1,12 @@
-<li id="facebook_like" class="hidden-sm">
-  <div 
-	  class="fb-like" 
-	  data-href="https://www.facebook.com/hamsafaryab" 
-	  data-layout="button_count" 
-	  data-action="like" 
-	  data-show-faces="false" 
-	  data-share="false"
-  ></div>
-</li>
-
+<% unless (request.try(:location).try(:country_code) == 'IR')  %>
+	<li id="facebook_like" class="hidden-sm">
+	  <div 
+		  class="fb-like" 
+		  data-href="https://www.facebook.com/hamsafaryab" 
+		  data-layout="button_count" 
+		  data-action="like" 
+		  data-show-faces="false" 
+		  data-share="false"
+	  ></div>
+	</li>
+<% end %>
